<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ExpensesActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="301dp"
        android:gravity="center_vertical"
        android:stretchColumns="1">

        <TableRow>

            <TextView
                android:padding="3dip"
                android:text="@string/expense" />

            <TextView
                android:gravity="center"
                android:padding="3dip"
                android:text="@string/category" />

            <TextView
                android:gravity="right"
                android:padding="3dip"
                android:text="@string/date" />
        </TableRow>

        <TableRow>

            <TextView
                android:padding="3dip"
                android:text="@string/value1" />

            <TextView
                android:gravity="center"
                android:padding="3dip"
                android:text="@string/transportation" />

            <TextView
                android:gravity="right"
                android:padding="3dip"
                android:text="@string/nov_18" />
        </TableRow>

        <TableRow>

            <TextView
                android:padding="3dip"
                android:text="@string/value2" />

            <TextView
                android:gravity="center"
                android:padding="3dip"
                android:text="@string/food_category" />

            <TextView
                android:gravity="right"
                android:padding="3dip"
                android:text="@string/nov_19" />
        </TableRow>

        <TableRow>

            <TextView
                android:padding="3dip"
                android:text="@string/value3" />

            <TextView
                android:gravity="center"
                android:padding="3dip"
                android:text="@string/miscellaneous" />

            <TextView
                android:gravity="right"
                android:padding="3dip"
                android:text="@string/oct_5" />
        </TableRow>

        <TableRow>

            <TextView
                android:padding="3dip"
                android:text="@string/value4" />

            <TextView
                android:gravity="center"
                android:padding="3dip"
                android:text="@string/bill" />

            <TextView
                android:gravity="right"
                android:padding="3dip"
                android:text="@string/nov_10" />
        </TableRow>

        <TableRow>

            <TextView
                android:padding="3dip"
                android:text="@string/value5" />

            <TextView
                android:gravity="center"
                android:padding="3dip"
                android:text="@string/groceries" />

            <TextView
                android:gravity="right"
                android:padding="3dip"
                android:text="@string/nov_8" />
        </TableRow>

        <TableRow>

            <TextView
                android:padding="3dip"
                android:text="@string/value6" />

            <TextView
                android:gravity="center"
                android:padding="3dip"
                android:text="@string/food_category" />

            <TextView
                android:gravity="right"
                android:padding="3dip"
                android:text="@string/nov_14" />
        </TableRow>

        <TableRow>

            <TextView
                android:padding="3dip"
                android:text="@string/value7" />

            <TextView
                android:gravity="center"
                android:padding="3dip"
                android:text="@string/transportation" />

            <TextView
                android:gravity="right"
                android:padding="3dip"
                android:text="@string/oct_31" />
        </TableRow>
    </TableLayout>



</android.support.design.widget.CoordinatorLayout>